register not completed